--- a/dotconfig/polybar/config.ini
+++ b/dotconfig/polybar/config.ini
@@ -133,11 +133,11 @@ content-overline = ${colors.background}
 content-underline = ${colors.background}
 content = ""
 
-[module/tray]
-type = custom/script
-tail = true
-exec = ~/tray_width.sh
-format-background = ${colors.shade16}
+;[module/tray]
+;type = custom/script
+;tail = true
+;exec = ~/tray_width.sh
+;format-background = ${colors.shade16}
 
 [module/bspwm]
 type = internal/bspwm
@@ -286,15 +286,15 @@ format-foreground = ${colors.shade14}
 format-overline = ${colors.background}
 format-underline = ${colors.background}
 
-[module/bluetooth]
-type = custom/script
+;[module/bluetooth]
+;type = custom/script
 ;exec = ~/.config/polybar/scripts/bluetooth.sh
-tail = true
+;tail = true
 ;click-left = ~/.config/polybar/scripts/bluetooth.sh --toggle &
-format-foreground = ${colors.shade5}
-format-background = ${colors.shade16}
-format-overline = ${colors.background}
-format-underline = ${colors.background}
+;format-foreground = ${colors.shade5}
+;format-background = ${colors.shade16}
+;format-overline = ${colors.background}
+;format-underline = ${colors.background}
 
 [module/dunst]
 type = custom/ipc
